# spartan-whir

./: AGENTS.md  Cargo.toml  README.md  SPARTAN_LC_UPGRADE_PLAN.md
.github/: copilot-instructions.md
benches/: proof_size_roundtrip.rs  proof_size_tracing.rs
examples/: grind_bench.rs  grind_predicate_bench.rs  sha256_512b_circom.rs  sha256_circom_bench.rs
scripts/: bench_koalabear_witness_ab.py  bench_sum_of_squares_witness.sh  poseidon_schedule_add_heldout.py  poseidon_schedule_scorer.py
src/: canonical_challenger.rs  circom.rs  codec.rs  codec_v1.rs  config.rs  domain_separator.rs  engine.rs  error.rs  fixtures.rs  hashers.rs  keccak_challenger.rs  lib.rs  pcs.rs  pcs_config.rs  plonky3_whir_pcs.rs  poly.rs  poseidon.rs  profiling.rs  protocol.rs  r1cs.rs  security.rs  spark.rs  statement.rs  sumcheck.rs  whir_params.rs  whir_pcs.rs
tests/: circom_frontend_contract.rs  codec_contract.rs  codec_v1.rs  domain_separator_contract.rs  engine_type_surface.rs  generic_extension_choice.rs  large_commit_target_e2e.rs  no_std_compile_guards.rs  octic_johnson_schedule.rs  pcs_lifecycle_contract.rs  poseidon_deployment_api.rs  poseidon_plonky3_whir_contract.rs  proof_type_shape.rs  protocol_stub_contract.rs  quintic_trinomial.rs  security_invariants.rs  spark_preprocessing.rs  sparse_matrix_metadata.rs  sparsity_sweep_ignored.rs  statement_builder_contract.rs  sumcheck_stub_contract.rs  synthetic_fixture_generator.rs  transcript_consistency_stub_contract.rs  whir_params_defaults.rs  whir_pcs_config_contract.rs  whir_pcs_contract.rs  whir_pcs_phase2.rs  witness_to_mle_contract.rs
tests/circuits/: README.md  binsum.circom  non_power_of_two.circom  regenerate_fixtures.sh  sha256_1024b.circom  sha256_128b.circom  sha256_2048b.circom  sha256_256b.circom  sha256_512b.circom  sum_of_squares.circom  tiny_arithmetic.circom
tests/circuits/circomlib-sha256/: constants.circom  sha256.circom  sha256compression.circom  sha256compression_function.circom
tests/circuits/koalabear-sha256/: constants.circom  round.circom  sha256_bytes.circom  sha256compression.circom  t1.circom
tests/common/: mod.rs
tests/fixtures/circom/: non_power_of_two.r1cs  non_power_of_two.wtns  non_power_of_two_input.json  tiny_arithmetic.r1cs  tiny_arithmetic.wtns  tiny_arithmetic_input.json
tests/python/: test_poseidon_schedule_scorer.py
