[package]
name = "spartan-whir"
version = "0.1.0"
edition = "2021"

[lib]
name = "spartan_whir"
path = "src/lib.rs"

[dependencies]
whir-p3 = { path = "../whir-p3", default-features = false }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git", rev = "c38eb05" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git", rev = "c38eb05" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "c38eb05" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git", rev = "c38eb05" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "c38eb05" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", rev = "c38eb05" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "c38eb05" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", rev = "c38eb05" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "c38eb05" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git", rev = "c38eb05" }
tracing = { version = "0.1.44", default-features = false }

[features]
default = []
circom = []
keccak_no_prefix = []
# Enables data-parallelism in hot paths via rayon (currently affects the
# grinding loop in `CanonicalSerializingChallenger32::grind`, plus any
# `into_par_iter` calls reachable from this crate). Without this feature,
# `p3-maybe-rayon` falls back to a serial shim and grinding runs on one core.
parallel = ["p3-maybe-rayon/parallel", "whir-p3/parallel"]

[[bin]]
name = "circom-adapter-check"
path = "src/bin/circom-adapter-check.rs"
required-features = ["circom"]

[dev-dependencies]
criterion = "0.8"
tracing = { version = "0.1.44", features = ["std"] }

[[bench]]
name = "proof_size_roundtrip"
harness = false
