[package]
name = "spartan-whir"
version = "0.1.0"
edition = "2021"

[lib]
name = "spartan_whir"
path = "src/lib.rs"

[dependencies]
# TODO: Make this a pinned git dependency so standalone Poseidon-only users do
# not need a downstream patch for this optional legacy backend.
whir-p3 = { path = "../whir-p3", default-features = false, optional = true }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git", rev = "fc7d591e6ec54b9220ed120e1ba0f8978a9c2391" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git", rev = "fc7d591e6ec54b9220ed120e1ba0f8978a9c2391" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git", rev = "fc7d591e6ec54b9220ed120e1ba0f8978a9c2391" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "fc7d591e6ec54b9220ed120e1ba0f8978a9c2391" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git", rev = "fc7d591e6ec54b9220ed120e1ba0f8978a9c2391" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "fc7d591e6ec54b9220ed120e1ba0f8978a9c2391" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", rev = "fc7d591e6ec54b9220ed120e1ba0f8978a9c2391" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "fc7d591e6ec54b9220ed120e1ba0f8978a9c2391" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", rev = "fc7d591e6ec54b9220ed120e1ba0f8978a9c2391" }
p3-multilinear-util = { git = "https://github.com/Plonky3/Plonky3.git", rev = "fc7d591e6ec54b9220ed120e1ba0f8978a9c2391" }
p3-sumcheck = { git = "https://github.com/Plonky3/Plonky3.git", rev = "fc7d591e6ec54b9220ed120e1ba0f8978a9c2391" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "fc7d591e6ec54b9220ed120e1ba0f8978a9c2391" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git", rev = "fc7d591e6ec54b9220ed120e1ba0f8978a9c2391" }
p3-whir = { git = "https://github.com/Plonky3/Plonky3.git", rev = "fc7d591e6ec54b9220ed120e1ba0f8978a9c2391" }
serde = { version = "1", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = "1.0"
tracing = { version = "0.1.44", default-features = false }

[features]
default = []
circom = []
whir-p3-backend = ["dep:whir-p3"]
keccak_no_prefix = []
# Enables data-parallelism in hot paths via rayon (currently affects the
# grinding loop in `CanonicalSerializingChallenger32::grind`, plus any
# `into_par_iter` calls reachable from this crate). Without this feature,
# `p3-maybe-rayon` falls back to a serial shim and grinding runs on one core.
parallel = ["p3-maybe-rayon/parallel", "whir-p3?/parallel"]

[[bin]]
name = "circom-adapter-check"
path = "src/bin/circom-adapter-check.rs"
required-features = ["circom"]

[[bin]]
name = "poseidon-schedule-heldout"
path = "src/bin/poseidon-schedule-heldout.rs"
required-features = ["circom"]

[[example]]
name = "sha256_512b_circom"
path = "examples/sha256_512b_circom.rs"
required-features = ["circom", "whir-p3-backend"]

[[example]]
name = "sha256_circom_bench"
path = "examples/sha256_circom_bench.rs"
required-features = ["circom", "whir-p3-backend"]

[dev-dependencies]
bincode = "1.3"
criterion = "0.8"
libloading = "0.8"
sha2 = "0.10"
tracing = { version = "0.1.44", features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std"] }

[[bench]]
name = "proof_size_roundtrip"
harness = false
required-features = ["whir-p3-backend"]
